correction du nav lorsque affichage en mobile, reste faire btn burger et idéalement faie que la section barreCompte overlap la section hero

--- a/sass/layout/_entete.scss
+++ b/sass/layout/_entete.scss
@@ -24,6 +24,9 @@
             background-color: #fff;
             padding: 20px;
             flex-direction: column;
+            width: 100%;
+            justify-content: center;
+            text-align: center;
         }
     }
     
